--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.5.3",
     "formik": "^2.2.6",
     "jquery": "^3.5.1",
+    "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^4",
     "popper.js": "^1.16.1",
