--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "^4.0.1",
     "react-share": "^4.3.1",
     "react-toastify": "^6.2.0",
+    "react-transaction-toasts": "^1.3.0",
     "react-truncate-string": "^1.3.0",
     "reactstrap": "^8.8.1",
     "reinspect": "^1.1.0",
