--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devloops/material-ui-dropzone": "^0.1.9",
     "@elrondnetwork/erdjs": "^1.1.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4",
+    "@material-ui/icons": "^4.11.2",
     "@popperjs/core": "^2.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,33 +18,26 @@
     "@types/react": "^17",
     "@types/react-dom": "^17",
     "@types/react-router-dom": "^5",
-    "awesome-react-icons": "^1.4.7",
     "bootstrap": "^4.5.3",
-    "formik": "^2.2.6",
+    "clsx": "^1.1.1",
+    "elrondjs": "^2",
     "jquery": "^3.5.1",
-    "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-chartjs-2": "^2.11.1",
-    "react-dom": "^17.0.1",
+    "react": "^17",
+    "react-dom": "^17",
     "react-dropzone": "^11.2.4",
-    "react-minimal-side-navigation": "^1.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
-    "react-share": "^4.3.1",
     "react-toastify": "^6.2.0",
-    "react-transaction-toasts": "^1.3.0",
-    "react-truncate-string": "^1.3.0",
-    "reactstrap": "^8.8.1",
+    "react-transaction-toasts": "^1.3.3",
     "reinspect": "^1.1.0",
     "typescript": "^4.1.3",
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -63,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/ledgerhq__hw-transport-u2f": "^4.21.2",
+    "@types/ledgerhq__hw-transport-webusb": "^4.70.1"
   }
 }
