--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@elrondnetwork/erdjs": "^1.1.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4",
     "@material-ui/icons": "^4.11.2",
     "@popperjs/core": "^2.6.0",
