--- a/package.json
+++ b/package.json
@@ -3,38 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devloops/material-ui-dropzone": "^0.1.9",
-    "@elrondnetwork/erdjs": "^1.1.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
+    "@ledgerhq/hw-transport-webusb": "^5.38.0",
+    "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.11.2",
     "@popperjs/core": "^2.6.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^26",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17",
-    "@types/react-dom": "^17",
-    "@types/react-router-dom": "^5",
     "bootstrap": "^4.5.3",
     "clsx": "^1.1.1",
+    "coingecko-api": "^1.0.10",
     "elrondjs": "^2",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17",
     "react-dropzone": "^11.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4",
     "react-toastify": "^6.2.0",
     "react-transaction-toasts": "^1.3.3",
     "reinspect": "^1.1.0",
-    "typescript": "^4.1.3",
+    "typescript": "^3",
     "yup": "^0.32.8"
   },
   "scripts": {
@@ -61,7 +55,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26",
     "@types/ledgerhq__hw-transport-u2f": "^4.21.2",
-    "@types/ledgerhq__hw-transport-webusb": "^4.70.1"
+    "@types/ledgerhq__hw-transport-webusb": "^4.70.1",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
+    "@types/react-router-dom": "^5"
   }
 }
