--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.1.1",
     "coingecko-api": "^1.0.10",
     "elrondjs": "^2",
+    "i18next": "^19.8.4",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
@@ -23,6 +24,7 @@
     "react-device-detect": "^1.15.0",
     "react-dom": "^17",
     "react-dropzone": "^11.2.4",
+    "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4",
     "react-toastify": "^6.2.0",
